--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "vuex": "^4.0.1"
   },
   "devDependencies": {
-    "@quasar/app": "^3.0.0"
+    "@quasar/app": "^3.0.0",
+    "electron": "^19.0.9"
   },
   "browserslist": [
     "last 10 Chrome versions",
