--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "devDependencies": {
     "@quasar/app": "^3.0.0",
-    "electron": "^19.0.9"
+    "electron": "^19.0.9",
+    "electron-packager": "^15.5.1"
   },
   "browserslist": [
     "last 10 Chrome versions",
